--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "http": "0.0.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "path": "^0.12.7"
   }
 }
